--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,6 @@ dependencies = [
     "tqdm>=4.66.4",
     "rich>=13.7.1",
     "typer>=0.16.0",
-    "mineru[core]>=2.6",
     "tabulate>=0.9.0",
     "minio>=7.2.7",
     "Pillow>=10.5.0",
@@ -62,8 +61,11 @@ dependencies = [
     "aiofiles>=24.1.0",
     "aiohttp>=3.9.0",
     "deepagents>=0.2.5",
+    "loguru>=0.7.3",
     "json-repair>=0.54.0",
     "openpyxl>=3.1.5",
+    "alembic>=1.13.0",
+    "psycopg2-binary>=2.9.0",
 ]
 [tool.ruff]
 line-length = 120  # 代码最大行宽
